--- a/public/resources/css/pr-menu.css
+++ b/public/resources/css/pr-menu.css
@@ -273,12 +273,14 @@
 .menu-main,
 .menu-pastries {
   background-color: #1e1f26;
-  color: #ffffff; }
+  color: #ffffff;
+  text-align: center; }
 
 .menu-drinks,
 .menu-entree {
   background-color: #f8f8f8;
-  color: #1e1f26; }
+  color: #1e1f26;
+  text-align: center; }
 
 .menu-entree {
   margin: 112px 0 0 0;
@@ -288,7 +290,8 @@
       margin: 1rem 0; } }
 
 .menu-dessert {
-  color: #1e1f26; }
+  color: #1e1f26;
+  text-align: center; }
 
 .course {
   font-size: 48px;
@@ -312,8 +315,7 @@
   font-size: 0.8rem;
   font-weight: 400;
   padding: 16px 0;
-  padding: 1rem 0;
-  text-align: center; }
+  padding: 1rem 0; }
 
 #footer-section {
   -ms-flex-pack: distribute;
